--- a/src/gwt/public/rooms/index.html
+++ b/src/gwt/public/rooms/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head><title>Room</title></head>
+<head><title>Rooms</title></head>
 <body style="background: #FFFFFF">
   <iframe id="__gwt_historyFrame" style="width:0px;height:0px;border:0px;display:none"></iframe>
-  <script language="javascript" src="room.nocache.js"></script>
+  <script language="javascript" src="rooms.nocache.js"></script>
 </body>
 </html>
