--- a/rsrc/email/wrapper/message.html
+++ b/rsrc/email/wrapper/message.html
@@ -75,9 +75,8 @@ blockquote {
 ${content}
 </td></tr>
 <tr><td class="wrapFooter">
-If you no longer wish to receive announcements from Whirled, adjust your preferences on the
-<a style="color: #FFFFFF" href="${base_url}#me-account">
-Whirled Account</a> page.
+Please <a style="color: #FFFFFF" href="${base_url}#account-optout_%OPTOUTBITS%">click here</a>
+if you no longer wish to receive announcements from Whirled.
 </td></tr>
 </table>
 </center>
