--- a/rsrc/email/wrapper/message.html
+++ b/rsrc/email/wrapper/message.html
@@ -45,8 +45,15 @@ blockquote {
   margin-bottom: 10px;
 }
 
+.wrapHeader {
+  background: #3A86B7;
+  text-align: center;
+  height: 25px;
+  font-weight: bold;
+}
+
 .wrapFooter {
-  background: url(${base_url}images/email/wrap_footer.jpg);
+  background: url(${base_url}images/email/wrap_footer.jpg) #3A86B7;
   font-size: 12px;
   text-align: center;
   padding-top: 70px;
@@ -68,10 +75,10 @@ blockquote {
 </head>
 <body>
 <center>
-<table width="642">
-<tr><td align="center">
-<img src="${base_url}images/email/wrap_header.jpg"></td></tr>
-<tr><td>
+<table width="642" border="0" cellpadding="0" cellspacing="0">
+<tr><td align="center" class="wrapHeader">
+<img src="${base_url}images/email/wrap_header.jpg" alt="Whirled News"></td></tr>
+<tr><td style="padding-top: 10px">
 ${content}
 </td></tr>
 <tr><td class="wrapFooter">
